# NeutronEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  example.cpp
Neutron/: Color.h  Drawable.cpp  Drawable.h  Events.cpp  Events.h  Helper.cpp  Helper.h  InputAxis.cpp  InputAxis.h  InputSystem.cpp  InputSystem.h  Logger.cpp  Logger.h  Window.cpp  Window.h
Neutron/Math/: Axis.cpp  Axis.h  Vector2.cpp  Vector2.h
Neutron/Objects/: GameObject.cpp  GameObject.h
Neutron/macros/: ansi.h  mesh.h
NeutronEditor/: main.cpp
NeutronEditor/resources/: qml.qrc
NeutronEditor/src/: MainWindow.cpp  MainWindow.h  main.cpp
NeutronEngine/: CMakeLists.txt
NeutronEngine/Neutron/include/Neutron/: Color.h  Colour.h  Events.h  GameObject.h  Helper.h  Image.h  InputSystem.h  Logger.h  Neutron.h  Proxy.h  Shader.h  Texture.h  Window.h  test.h
NeutronEngine/Neutron/include/Neutron/Components/: BaseComponent.h  RendererComponents.h  Transform.h
NeutronEngine/Neutron/include/Neutron/Math/: Axis.h  Concepts.h  Matrix.h  Vector2.h
NeutronEngine/Neutron/include/Neutron/Utils/: Files.h
NeutronEngine/Neutron/include/Neutron/macros/: ansi.h  dll.h  input.h  mesh.h
NeutronEngine/Neutron/src/: Color.cpp  Events.cpp  Helper.cpp  Image.cpp  InputSystem.cpp  Logger.cpp  Shader.cpp  Texture.cpp  Window.cpp  gl.c
NeutronEngine/Neutron/src/Components/: BaseComponent.cpp  RendererComponents.cpp  Transform.cpp
NeutronEngine/Neutron/src/Math/: Axis.cpp  Vector2.cpp
NeutronEngine/Neutron/src/Utils/: Files.cpp
NeutronEngine/include/: fbxsdk.h
NeutronEngine/include/glad/: gl.h
NeutronExample/: README.md
NeutronExample/Logging/: logmain.cpp  main.cpp
NeutronExample/cpp/: Controller.h  cppmain.cpp  example.cpp  pla.frag  player.frag  player.shader
neutron/: Color.cpp  Color.h  Events.cpp  Events.h  Exception.cpp  Exception.h  Logger.cpp  Logger.h  Vector2.cpp  Vector2.h  Window.cpp  Window.h  macros.h
